test/error/sys-func/test-read-invalid-type/p.pas
program test_read_invalid_type;
var i: array [1..2, 1..2, 1..2] of integer;
begin
    read(i);
end.
